2004-05-21  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/mainwindow.cc (MainWindow::on_select_folder): Simplify the
	code: with the new FileChooser we no longer have to handle the case
	of selecting a file instead of a directory.

2004-05-21  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/fileio.h (ErrorBinaryFile): New exception class.

	* src/fileio.cc (load_iochannel): Throw ErrorBinaryFile if the
	input stream contains '\0' bytes, rather than just returning a
	null pointer.
	(load_file): Throw ErrorBinaryFile if the file could not be
	loaded in either of the specified encodings.

	* src/filetree.cc (FileTree::load_file_with_fallback): Handle
	the ErrorBinaryFile exception.

2004-05-21  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/filetree.cc (FileTree::replace_all_matches): Substitute
	Gtk::TreeIter with Gtk::TreeModel::iterator for consistency.

2004-05-21  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/undostack.cc (UndoStack::do_undo): Don't create a temporary
	copy of the pulse slot since libsigc++2 allows calling const slots.

2004-05-21  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/filetree.cc: Replace a couple of explicit TreePath(iter)
	conversions by simple assignments.
	(FileTree::replace_all_matches): Make sure path_match_first_
	points to the first file that still has matches after a replace
	operation was interrupted.
	(FileTree::replace_matches_at_iter): Remove the assertion that
	FileBuffer::get_match_count() must return 0 after returning from
	FileBuffer::replace_all_matches(), because the operation might
	have been interrupted.

2004-05-20  Daniel Elstner  <daniel.elstner@gmx.net>

	* ui/mainwindow.glade (entry_preview): Set "can_focus" to False.

2004-05-20  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/mainwindow.cc: Break apart a couple of uber-long lines.

2004-05-20  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/aboutdialog.cc (package_title): New string constant which