@@ -1,5 +1,10 @@
 2004-05-21  Daniel Elstner  <daniel.elstner@gmx.net>
 
+	* src/mainwindow.cc (MainWindow::on_find_files): Minor coding style
+	modifications.
+
+2004-05-21  Daniel Elstner  <daniel.elstner@gmx.net>
+
 	* src/mainwindow.cc (MainWindow::on_select_folder): Simplify the
 	code: with the new FileChooser we no longer have to handle the case
 	of selecting a file instead of a directory.
